--- a/calibration-of-trapped-ion-systems.html
+++ b/calibration-of-trapped-ion-systems.html
@@ -55,9 +55,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes/university.html">Notes</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -293,13 +293,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
