--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes/university.html">Notes</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -122,7 +122,7 @@
                 <div class="row gtr-50">
                   <a class="image fit centered"
                     ><img
-                      src="images/photo.jpg"
+                      src="/images/photo.jpg"
                       alt=""
                       style="width: 80%; border-radius: 50%"
                   /></a>
@@ -161,12 +161,12 @@
                 </p>
                 <audio id="name-audio">
                   <source
-                    src="audio/pronunciation_zh_chen.mp3"
+                    src="/audio/pronunciation_zh_chen.mp3"
                     type="audio/mpeg"
                   />
                 </audio>
                 <footer>
-                  <a href="docs/CV_ChenHuang.pdf" class="button">My Full CV</a>
+                  <a href="/docs/CV_ChenHuang.pdf" class="button">My Full CV</a>
                 </footer>
               </section>
               <hr />
@@ -470,7 +470,7 @@
                       remotely, where I focused on coding tasks related to
                       plasma motion while gaining insights into
                       <strong>plasma processing techniques</strong>. (<a
-                        href="docs/certificate/certificate-MITACS.pdf"
+                        href="/docs/certificate/certificate-MITACS.pdf"
                         >View Certificate</a
                       >)
                     </li>
@@ -527,7 +527,7 @@
                         to top 1%. The awarded students will be provided with
                         professional instructors and personalized talent
                         training plans. (<a
-                          href="docs/certificate/certificate-outstanding-UG.pdf"
+                          href="/docs/certificate/certificate-outstanding-UG.pdf"
                           >View Certificate</a
                         >)</i
                       >
@@ -580,8 +580,8 @@
               </p>
               <div class="row gtr-50">
                 <div class="col-4">
-                  <a href="images/IRL V1N1 cover.png" class="image fit">
-                    <img src="images/IRL V1N1 cover.png" alt="" />
+                  <a href="/images/IRL V1N1 cover.png" class="image fit">
+                    <img src="/images/IRL V1N1 cover.png" alt="" />
                   </a>
                 </div>
                 <div class="col-8">
@@ -606,8 +606,8 @@
             </article>
             <article class="col-4 col-12-mobile special">
               <br />
-              <a href="images/IBPE-intro.jpeg" class="image fit">
-                <img src="images/IBPE-intro-small.jpeg" alt="" />
+              <a href="/images/IBPE-intro.jpeg" class="image fit">
+                <img src="/images/IBPE-intro-small.jpeg" alt="" />
               </a>
             </article>
           </div>
@@ -667,13 +667,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
