--- a/photography.html
+++ b/photography.html
@@ -53,9 +53,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes/university.html">Notes</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -84,8 +84,8 @@
       <section class="carousel">
         <div class="reel">
           <article>
-            <a href="images/photograph/full/regents.jpg" class="image featured"
-              ><img src="images/photograph/small/regents.jpeg" alt=""
+            <a href="/images/photograph/full/regents.jpg" class="image featured"
+              ><img src="/images/photograph/small/regents.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Regent Street, London, UK</a></h3>
@@ -95,9 +95,9 @@
 
           <article>
             <a
-              href="images/photograph/full/switzerland.JPG"
+              href="/images/photograph/full/switzerland.JPG"
               class="image featured"
-              ><img src="images/photograph/small/switzerland.jpeg" alt=""
+              ><img src="/images/photograph/small/switzerland.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Lungern, Switzerland</a></h3>
@@ -107,9 +107,9 @@
 
           <article>
             <a
-              href="images/photograph/full/copenhagen.JPG"
+              href="/images/photograph/full/copenhagen.JPG"
               class="image featured"
-              ><img src="images/photograph/small/copenhagen.jpeg" alt=""
+              ><img src="/images/photograph/small/copenhagen.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Copenhagen, Denmark</a></h3>
@@ -118,8 +118,8 @@
           </article>
 
           <article>
-            <a href="images/photograph/full/paris2.JPG" class="image featured"
-              ><img src="images/photograph/small/paris2.jpeg" alt=""
+            <a href="/images/photograph/full/paris2.JPG" class="image featured"
+              ><img src="/images/photograph/small/paris2.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Louvre, Paris, France</a></h3>
@@ -128,8 +128,8 @@
           </article>
 
           <article>
-            <a href="images/photograph/full/morocco.JPG" class="image featured"
-              ><img src="images/photograph/small/morocco.jpeg" alt=""
+            <a href="/images/photograph/full/morocco.JPG" class="image featured"
+              ><img src="/images/photograph/small/morocco.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Tangier, Morocco</a></h3>
@@ -138,8 +138,8 @@
           </article>
 
           <article>
-            <a href="images/photograph/full/morocco2.JPG" class="image featured"
-              ><img src="images/photograph/small/morocco2.jpeg" alt=""
+            <a href="/images/photograph/full/morocco2.JPG" class="image featured"
+              ><img src="/images/photograph/small/morocco2.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Chefchaouen, Morocco</a></h3>
@@ -148,8 +148,8 @@
           </article>
 
           <article>
-            <a href="images/photograph/full/beihai_park.JPG" class="image featured"
-              ><img src="images/photograph/small/beihai_park.jpeg" alt=""
+            <a href="/images/photograph/full/beihai_park.JPG" class="image featured"
+              ><img src="/images/photograph/small/beihai_park.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Beihai Park, Beijing, China</a></h3>
@@ -164,9 +164,9 @@
         <div class="reel">
           <article>
             <a
-              href="images/photograph/full/epping_forest.jpg"
+              href="/images/photograph/full/epping_forest.jpg"
               class="image featured"
-              ><img src="images/photograph/small/epping_forest.jpeg" alt=""
+              ><img src="/images/photograph/small/epping_forest.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Epping Forest, UK</a></h3>
@@ -175,9 +175,9 @@
           </article>
           <article>
             <a
-              href="images/photograph/full/white_cliff.JPG"
+              href="/images/photograph/full/white_cliff.JPG"
               class="image featured"
-              ><img src="images/photograph/small/white_cliff.jpeg" alt=""
+              ><img src="/images/photograph/small/white_cliff.jpeg" alt=""
             /></a>
             <header>
               <h3><a>White Cliff, UK</a></h3>
@@ -187,9 +187,9 @@
 
           <article>
             <a
-              href="images/photograph/full/switzerland2.JPG"
+              href="/images/photograph/full/switzerland2.JPG"
               class="image featured"
-              ><img src="images/photograph/small/switzerland2.jpeg" alt=""
+              ><img src="/images/photograph/small/switzerland2.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Lungern, Switzerland</a></h3>
@@ -197,8 +197,8 @@
             <p>June 2024</p>
           </article>
           <article>
-            <a href="images/photograph/full/paris.JPG" class="image featured"
-              ><img src="images/photograph/small/paris.jpeg" alt=""
+            <a href="/images/photograph/full/paris.JPG" class="image featured"
+              ><img src="/images/photograph/small/paris.jpeg" alt=""
             /></a>
             <header>
               <h3><a>Louvre, Paris, France</a></h3>
@@ -261,13 +261,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
