--- a/presentations.html
+++ b/presentations.html
@@ -56,9 +56,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes/university.html">Notes</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -85,7 +85,7 @@
               <ul>
                 <li>
                   <strong>Course Presentation: </strong
-                  ><a href="docs/presentations/2024-02-22-scaling.pdf"
+                  ><a href="/docs/presentations/2024-02-22-scaling.pdf"
                     >Architectures and Approaches in Scaling the Trapped-Ion
                     Quantum Computer</a
                   ><br />
@@ -103,7 +103,7 @@
               <ul>
                 <li>
                   <strong>Quarterly Session: </strong
-                  ><a href="docs/presentations/2023-08-31-calibration.pdf"
+                  ><a href="/docs/presentations/2023-08-31-calibration.pdf"
                     >Automated Calibration of Experimental Parameters in
                     Trapped-Ion Quantum Computing</a
                   ><br />
@@ -116,7 +116,7 @@
               <ul>
                 <li>
                   <strong>IBPE Annual Conference: </strong
-                  ><a href="docs/presentations/2023-04-29-ion-trap-qc.pdf"
+                  ><a href="/docs/presentations/2023-04-29-ion-trap-qc.pdf"
                     >Ion Trap Quantum Computing: From Theory to Reality</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;April 29,
@@ -134,7 +134,7 @@
               <ul>
                 <li>
                   <strong>Bachelor's Degree: </strong
-                  ><a href="docs/presentations/2022-05-25-NV-sensing.pdf"
+                  ><a href="/docs/presentations/2022-05-25-NV-sensing.pdf"
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;May 25, 2022<br />
@@ -145,7 +145,7 @@
               <ul>
                 <li>
                   <strong>Journal Club: </strong
-                  ><a href="docs/presentations/2022-01-14-progress-talk.pdf"
+                  ><a href="/docs/presentations/2022-01-14-progress-talk.pdf"
                     >Ions in an AC Electric Field</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;January 14,
@@ -162,7 +162,7 @@
               <ul>
                 <li>
                   <strong>Journal Club: </strong
-                  ><a href="docs/presentations/2021-06-08-journal.pdf"
+                  ><a href="/docs/presentations/2021-06-08-journal.pdf"
                     >An Introduction to Ghost Imagine: Quantum and Classical</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 8, 2021<br />
@@ -173,7 +173,7 @@
               <ul>
                 <li>
                   <strong>Class Presentation: </strong
-                  ><a href="docs/presentations/2021-06-01-G.pdf"
+                  ><a href="/docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;June 1, 2021<br />
@@ -184,7 +184,7 @@
               <ul>
                 <li>
                   <strong>Journal Club: </strong
-                  ><a href="docs/presentations/2021-04-20-journal.pdf"
+                  ><a href="/docs/presentations/2021-04-20-journal.pdf"
                     >Polarization Entanglement-Enabled Quantum Holography</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;April 20,
@@ -196,7 +196,7 @@
               <ul>
                 <li>
                   <strong>Journal Club: </strong
-                  ><a href="docs/presentations/2021-03-30-journal.pdf"
+                  ><a href="/docs/presentations/2021-03-30-journal.pdf"
                     >General Model of Photon-Pair Detection with an Image
                     Sensor</a
                   ><br />
@@ -215,7 +215,7 @@
                 <li>
                   <strong>Class Presentation: </strong
                   ><a
-                    href="docs/presentations/2020-12-10-quantum-measurement.pdf"
+                    href="/docs/presentations/2020-12-10-quantum-measurement.pdf"
                     >Quantum Entanglement and Quantum Measurement</a
                   ><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;December 10,
@@ -233,7 +233,7 @@
                 <li>
                   <strong>Class Presentation: </strong
                   ><a
-                    href="docs/presentations/2019-12-20-magnetic-field-distribution.pdf"
+                    href="/docs/presentations/2019-12-20-magnetic-field-distribution.pdf"
                     >Magnetic Field Distribution in Current-Carrying Solenoids
                     and Helmholtz Coils</a
                   ><br />
@@ -301,13 +301,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
