--- a/research.html
+++ b/research.html
@@ -55,9 +55,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes/university.html">Notes</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -125,7 +125,7 @@
                   and quantum machine learning.
                 </p>
                 <a class="image featured"
-                  ><img src="images/quantum-computer-levels.jpeg" alt=""
+                  ><img src="/images/quantum-computer-levels.jpeg" alt=""
                 /></a>
                 <p>
                   The awarding of
@@ -309,13 +309,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
