--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -67,7 +67,7 @@
               <p>Morbi convallis lectus malesuada sed fermentum dolore amet</p>
             </header>
             <a href="#" class="image featured"
-              ><img src="images/pic06.jpg" alt=""
+              ><img src="/images/pic06.jpg" alt=""
             /></a>
             <p>
               Commodo id natoque malesuada sollicitudin elit suscipit. Curae
@@ -122,7 +122,7 @@
           <div class="row">
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="images/pic07.jpg" alt=""
+                ><img src="/images/pic07.jpg" alt=""
               /></a>
               <header>
                 <h3><a href="#">Gravida aliquam penatibus</a></h3>
@@ -136,7 +136,7 @@
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="images/pic08.jpg" alt=""
+                ><img src="/images/pic08.jpg" alt=""
               /></a>
               <header>
                 <h3><a href="#">Sed quis rhoncus placerat</a></h3>
@@ -150,7 +150,7 @@
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="images/pic09.jpg" alt=""
+                ><img src="/images/pic09.jpg" alt=""
               /></a>
               <header>
                 <h3><a href="#">Magna laoreet et aliquam</a></h3>
@@ -261,32 +261,32 @@
               <div class="row gtr-25">
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic10.jpg" alt=""
+                    ><img src="/images/pic10.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic11.jpg" alt=""
+                    ><img src="/images/pic11.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic12.jpg" alt=""
+                    ><img src="/images/pic12.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic13.jpg" alt=""
+                    ><img src="/images/pic13.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic14.jpg" alt=""
+                    ><img src="/images/pic14.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic15.jpg" alt=""
+                    ><img src="/images/pic15.jpg" alt=""
                   /></a>
                 </div>
               </div>
@@ -352,13 +352,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
