--- a/notes/year.html
+++ b/notes/year.html
@@ -55,9 +55,9 @@
                 </li>
               </ul>
             </li>
-            <li><a href="publications.html">Publications</a></li>
-            <li><a href="presentations.html">Presentations</a></li>
-            <li><a href="notes/university.html">Notes</a></li>
+            <li><a href="/publications.html">Publications</a></li>
+            <li><a href="/presentations.html">Presentations</a></li>
+            <li><a href="/notes/university.html">Notes</a></li>
             <li>
               <a href="#">Life</a>
               <ul>
@@ -253,7 +253,7 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/notes-on-quantum-information.pdf"
+                        <a href="/docs/notes/notes-on-quantum-information.pdf"
                           ><strong>Study</strong> Notes on Quantum
                           Information</a
                         >
@@ -264,7 +264,7 @@
                     <h4><a>Quantum Optics (Fall 2023)</a></h4>
                     <ul>
                       <li>
-                        <a href="docs/notes/notes-on-quantum-optics.pdf"
+                        <a href="/docs/notes/notes-on-quantum-optics.pdf"
                           ><strong>Study</strong> Notes on Quantum Optics</a
                         >
                       </li>
@@ -277,13 +277,13 @@
                     <ul>
                       <li>
                         <a
-                          href="docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
+                          href="/docs/notes/notes-on-mathematical-methods-for-physicists.pdf"
                           ><strong>Study</strong> Notes on Mathematical Methods
                           for Physicists</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/revision-for-2024-mmp-exam.pdf"
+                        <a href="/docs/notes/revision-for-2024-mmp-exam.pdf"
                           ><strong>Review</strong> Notes on Mathematical Methods
                           for Physicists</a
                         >
@@ -295,7 +295,7 @@
                     <ul>
                       <li>
                         <a
-                          href="docs/notes/notes-on-advanced-classical-physics.pdf"
+                          href="/docs/notes/notes-on-advanced-classical-physics.pdf"
                           ><strong>Study</strong> Note on Advanced Classical
                           Mechanics</a
                         >
@@ -307,7 +307,7 @@
                     <ul>
                       <li>
                         <a
-                          href="docs/notes/notes-on-quantum-theory-of-matter.pdf"
+                          href="/docs/notes/notes-on-quantum-theory-of-matter.pdf"
                           ><strong>Study</strong> Notes on Quantum Theory of
                           Matter</a
                         >
@@ -329,13 +329,13 @@
                     <ul>
                       <li>
                         <a
-                          href="docs/notes/notes-on-laser-device-technology.pdf"
+                          href="/docs/notes/notes-on-laser-device-technology.pdf"
                           ><strong>Study</strong> Note on Laser Device
                           Technology</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/notes-on-nonlinear-optics.pdf"
+                        <a href="/docs/notes/notes-on-nonlinear-optics.pdf"
                           ><strong>Study</strong> Notes on Nonlinear Optics</a
                         >
                       </li>
@@ -372,12 +372,12 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[复变函数]期末复习笔记.pdf"
+                        <a href="/docs/notes/[复变函数]期末复习笔记.pdf"
                           ><strong>Review</strong> Notes on Complex Analysis</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[数学物理方程]课堂笔记.pdf"
+                        <a href="/docs/notes/[数学物理方程]课堂笔记.pdf"
                           ><strong>Study</strong> Notes on Equations of
                           Mathematical Physics</a
                         >
@@ -395,7 +395,7 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/note-on-classical-mechanics.pdf"
+                        <a href="/docs/notes/note-on-classical-mechanics.pdf"
                           ><strong>Study</strong> Notes on Theoretical
                           Mechanics</a
                         >
@@ -411,7 +411,7 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[电磁学]期末复习笔记.pdf"
+                        <a href="/docs/notes/[电磁学]期末复习笔记.pdf"
                           ><strong>Review</strong> Notes on Electromagnetics</a
                         >
                       </li>
@@ -429,22 +429,22 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[光学]课堂笔记_Part1.pdf"
+                        <a href="/docs/notes/[光学]课堂笔记_Part1.pdf"
                           ><strong>Study</strong> Notes on Optics - Part 1</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[光学]课堂笔记_Part2.pdf"
+                        <a href="/docs/notes/[光学]课堂笔记_Part2.pdf"
                           ><strong>Study</strong> Notes on Optics - Part 2</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[光学]课堂笔记_Part3.pdf"
+                        <a href="/docs/notes/[光学]课堂笔记_Part3.pdf"
                           ><strong>Study</strong> Notes on Optics - Part 4</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[光学]课堂笔记_Part4.pdf"
+                        <a href="/docs/notes/[光学]课堂笔记_Part4.pdf"
                           ><strong>Study</strong> Notes on Optics - Part 4</a
                         >
                       </li>
@@ -462,25 +462,25 @@
                       have been divided into four parts.
                     </p>
                     <li>
-                      <a href="docs/notes/[模拟电子技术]笔记_Part1.pdf"
+                      <a href="/docs/notes/[模拟电子技术]笔记_Part1.pdf"
                         ><strong>Study</strong> Notes on Analogue Electronics -
                         Part 1</a
                       >
                     </li>
                     <li>
-                      <a href="docs/notes/[模拟电子技术]笔记_Part2.pdf"
+                      <a href="/docs/notes/[模拟电子技术]笔记_Part2.pdf"
                         ><strong>Study</strong> Notes on Analogue Electronics -
                         Part 2</a
                       >
                     </li>
                     <li>
-                      <a href="docs/notes/[模拟电子技术]笔记_Part3.pdf"
+                      <a href="/docs/notes/[模拟电子技术]笔记_Part3.pdf"
                         ><strong>Study</strong> Notes on Analogue Electronics -
                         Part 3</a
                       >
                     </li>
                     <li>
-                      <a href="docs/notes/[模拟电子技术]笔记_Part4.pdf"
+                      <a href="/docs/notes/[模拟电子技术]笔记_Part4.pdf"
                         ><strong>Study</strong> Notes on Analogue Electronics -
                         Part 4</a
                       >
@@ -502,12 +502,12 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[量子力学]学习笔记.pdf"
+                        <a href="/docs/notes/[量子力学]学习笔记.pdf"
                           ><strong>Study</strong> Notes on Quantum Mechanics</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[量子力学]期末偷分宝典.pdf"
+                        <a href="/docs/notes/[量子力学]期末偷分宝典.pdf"
                           ><strong>Review</strong> Notes on Quantum Mechanics</a
                         >
                       </li>
@@ -518,7 +518,7 @@
                     <p>Prof. Zhao-Feng Kang</p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[电动力学]期末偷分宝典.pdf"
+                        <a href="/docs/notes/[电动力学]期末偷分宝典.pdf"
                           ><strong>Review</strong> Notes on Electrodynamics</a
                         >
                       </li>
@@ -529,7 +529,7 @@
                     <p>Prof. Yong Hu</p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[高等量子力学]课堂笔记.pdf"
+                        <a href="/docs/notes/[高等量子力学]课堂笔记.pdf"
                           ><strong>Study</strong> Note on Advanced Quantum
                           Mechanics</a
                         >
@@ -541,31 +541,31 @@
                     <p>Prof. Qi Song</p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[数字电子技术]笔记_Part1.pdf"
+                        <a href="/docs/notes/[数字电子技术]笔记_Part1.pdf"
                           ><strong>Study</strong> Notes on Digital Electronics -
                           Part 1</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[数字电子技术]笔记_Part2.pdf"
+                        <a href="/docs/notes/[数字电子技术]笔记_Part2.pdf"
                           ><strong>Study</strong> Notes on Digital Electronics -
                           Part 2</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[数字电子技术]笔记_Part3.pdf"
+                        <a href="/docs/notes/[数字电子技术]笔记_Part3.pdf"
                           ><strong>Study</strong> Notes on Digital Electronics -
                           Part 3</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[数字电子技术]笔记_Part4.pdf"
+                        <a href="/docs/notes/[数字电子技术]笔记_Part4.pdf"
                           ><strong>Study</strong> Notes on Digital Electronics -
                           Part 4</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[数字电子技术]笔记_Part5.pdf"
+                        <a href="/docs/notes/[数字电子技术]笔记_Part5.pdf"
                           ><strong>Study</strong> Notes on Digital Electronics -
                           Part 5</a
                         >
@@ -590,7 +590,7 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/note-on-statistical-physics.pdf"
+                        <a href="/docs/notes/note-on-statistical-physics.pdf"
                           ><strong>Study</strong> Notes on Thermodynamics and
                           Statistical Physics</a
                         >
@@ -602,7 +602,7 @@
                     <p>Prof. Liu-Song Yuan</p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[固体物理]期末复习笔记.pdf"
+                        <a href="/docs/notes/[固体物理]期末复习笔记.pdf"
                           ><strong>Review</strong> Notes on Solid State
                           Physics</a
                         >
@@ -614,12 +614,12 @@
                     <p>Prof. Jia-Hua Li</p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[量子光学]学习笔记.pdf"
+                        <a href="/docs/notes/[量子光学]学习笔记.pdf"
                           ><strong>Study</strong> Notes on Quantum Optics</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/[量子光学]复习笔记.pdf"
+                        <a href="/docs/notes/[量子光学]复习笔记.pdf"
                           ><strong>Review</strong> Notes on Quantum Optics</a
                         >
                       </li>
@@ -630,7 +630,7 @@
                     <p>Prof. He-Lin Wei</p>
                     <ul>
                       <li>
-                        <a href="docs/notes/[等离子体导论]课堂笔记.pdf"
+                        <a href="/docs/notes/[等离子体导论]课堂笔记.pdf"
                           ><strong>Study</strong> Notes on Introduction to
                           Plasma Physics</a
                         >
@@ -654,41 +654,41 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/Ch1_Phase in QM.pdf"
+                        <a href="/docs/notes/Ch1_Phase in QM.pdf"
                           ><strong>Study</strong> Notes - Chapter 1: Phase in
                           quantum mechanics</a
                         >
                       </li>
                       <li>
                         <a
-                          href="docs/notes/Ch2_Path Integral Formalism of QM.pdf"
+                          href="/docs/notes/Ch2_Path Integral Formalism of QM.pdf"
                           ><strong>Study</strong> Notes - Chapter 2: Path
                           integral formalism of quantum mechanics</a
                         >
                       </li>
                       <li>
-                        <a href="docs/notes/Ch3_The WKB Approximation.pdf"
+                        <a href="/docs/notes/Ch3_The WKB Approximation.pdf"
                           ><strong>Study</strong> Notes - Chapter 3: The WKB
                           approximation</a
                         >
                       </li>
                       <li>
                         <a
-                          href="docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
+                          href="/docs/notes/Ch4_Rotation And Vibration of Molecules.pdf"
                           ><strong>Study</strong> Notes - Chapter 4: Rotation
                           and vibration of molecules</a
                         >
                       </li>
                       <li>
                         <a
-                          href="docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
+                          href="/docs/notes/Ch5_Variational Principle with Its Application to Two-particle Systems.pdf"
                           ><strong>Study</strong> Notes - Chapter 5: Variation
                           principle</a
                         >
                       </li>
                       <li>
                         <a
-                          href="docs/notes/Ch6_Introduction to Many-body Theory.pdf"
+                          href="/docs/notes/Ch6_Introduction to Many-body Theory.pdf"
                           ><strong>Study</strong> Notes - Chapter 6:
                           Introduction to many-body theory</a
                         >
@@ -711,7 +711,7 @@
                     </p>
                     <ul>
                       <li>
-                        <a href="docs/notes/Physics_GRE_Notes.pdf"
+                        <a href="/docs/notes/Physics_GRE_Notes.pdf"
                           ><strong>Study</strong> Notes on Physics GRE</a
                         >
                       </li>
@@ -777,13 +777,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
