--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -71,7 +71,7 @@
                   </p>
                 </header>
                 <a href="#" class="image featured"
-                  ><img src="images/pic06.jpg" alt=""
+                  ><img src="/images/pic06.jpg" alt=""
                 /></a>
                 <p>
                   Commodo id natoque malesuada sollicitudin elit suscipit. Curae
@@ -152,7 +152,7 @@
                 <div class="row gtr-50">
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic10.jpg" alt=""
+                      ><img src="/images/pic10.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
@@ -164,7 +164,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic11.jpg" alt=""
+                      ><img src="/images/pic11.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
@@ -176,7 +176,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic12.jpg" alt=""
+                      ><img src="/images/pic12.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
@@ -188,7 +188,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic13.jpg" alt=""
+                      ><img src="/images/pic13.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
@@ -200,7 +200,7 @@
                   </div>
                   <div class="col-4">
                     <a href="#" class="image fit"
-                      ><img src="images/pic14.jpg" alt=""
+                      ><img src="/images/pic14.jpg" alt=""
                     /></a>
                   </div>
                   <div class="col-8">
@@ -221,7 +221,7 @@
           <div class="row">
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="images/pic07.jpg" alt=""
+                ><img src="/images/pic07.jpg" alt=""
               /></a>
               <header>
                 <h3><a href="#">Gravida aliquam penatibus</a></h3>
@@ -235,7 +235,7 @@
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="images/pic08.jpg" alt=""
+                ><img src="/images/pic08.jpg" alt=""
               /></a>
               <header>
                 <h3><a href="#">Sed quis rhoncus placerat</a></h3>
@@ -249,7 +249,7 @@
             </article>
             <article class="col-4 col-12-mobile special">
               <a href="#" class="image featured"
-                ><img src="images/pic09.jpg" alt=""
+                ><img src="/images/pic09.jpg" alt=""
               /></a>
               <header>
                 <h3><a href="#">Magna laoreet et aliquam</a></h3>
@@ -360,32 +360,32 @@
               <div class="row gtr-25">
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic10.jpg" alt=""
+                    ><img src="/images/pic10.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic11.jpg" alt=""
+                    ><img src="/images/pic11.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic12.jpg" alt=""
+                    ><img src="/images/pic12.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic13.jpg" alt=""
+                    ><img src="/images/pic13.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic14.jpg" alt=""
+                    ><img src="/images/pic14.jpg" alt=""
                   /></a>
                 </div>
                 <div class="col-6">
                   <a href="#" class="image fit"
-                    ><img src="images/pic15.jpg" alt=""
+                    ><img src="/images/pic15.jpg" alt=""
                   /></a>
                 </div>
               </div>
@@ -451,13 +451,13 @@
     </div>
 
     <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.dropotron.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/jquery.dropotron.min.js"></script>
+    <script src="/assets/js/jquery.scrolly.min.js"></script>
+    <script src="/assets/js/jquery.scrollex.min.js"></script>
+    <script src="/assets/js/browser.min.js"></script>
+    <script src="/assets/js/breakpoints.min.js"></script>
+    <script src="/assets/js/util.js"></script>
+    <script src="/assets/js/main.js"></script>
   </body>
 </html>
