--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <li>
               <a href="#">Life</a>
               <ul>
-                <li><a href="photography.html">Photography</a></li>
+                <li><a href="/photography.html">Photography</a></li>
               </ul>
             </li>
           </ul>
