--- a/publications.html
+++ b/publications.html
@@ -61,7 +61,7 @@
             <li>
               <a href="#">Life</a>
               <ul>
-                <li><a href="photography.html">Photography</a></li>
+                <li><a href="/photography.html">Photography</a></li>
               </ul>
             </li>
           </ul>
